[gd_scene load_steps=4 format=2]

[ext_resource path="res://music/MusicPlayer.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "FadeInTrack0"
tracks/0/type = "value"
tracks/0/path = NodePath("MusicTrack0:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.615572, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MusicTrack0:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeOutTrack0"
tracks/0/type = "value"
tracks/0/path = NodePath("MusicTrack0:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MusicTrack0:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="MusicPlayer" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MusicTrack0" type="AudioStreamPlayer" parent="."]

[node name="MusicTrack1" type="AudioStreamPlayer" parent="."]
volume_db = -80.0

[node name="MusicTrack2" type="AudioStreamPlayer" parent="."]
volume_db = -80.0

[node name="MusicTrack3" type="AudioStreamPlayer" parent="."]
volume_db = -80.0

[node name="Transition" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/FadeInTrack0 = SubResource( 1 )
anims/FadeOutTrack0 = SubResource( 2 )
